hosted files for live twitch extension added

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ Chat Royale.json
 chat-royale/public/static/octagon-xxl.png
 chat-royale/public/static/tempo-logo-ICON-BLUE.png
 chat-royale/public/static/triangle-xxl.png
+hosted/jquery-3.3.1.min.js
+hosted.zip
