Hosted tmi request complete
AWS lambda request to tmi for current viewers in chat working, returns array async

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ chat-royale/public/static/tempo-logo-ICON-BLUE.png
 chat-royale/public/static/triangle-xxl.png
 hosted/jquery-3.3.1.min.js
 hosted.zip
+chat-royale/services/hosted/chat-royale.zip
