--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ chat-royale/public/static/triangle-xxl.png
 hosted/jquery-3.3.1.min.js
 hosted.zip
 chat-royale/services/hosted/chat-royale.zip
+chat-royale/services/hosted/hosted-remove/hosted-remove.zip
