--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ hosted/jquery-3.3.1.min.js
 hosted.zip
 chat-royale/services/hosted/chat-royale.zip
 chat-royale/services/hosted/hosted-remove/hosted-remove.zip
+chat-royale/services/hosted/hosted-inital/index.zip
