--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ hosted.zip
 chat-royale/services/hosted/chat-royale.zip
 chat-royale/services/hosted/hosted-remove/hosted-remove.zip
 chat-royale/services/hosted/hosted-inital/index.zip
+*.zip
