hosted folder moved

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ chat-royale/services/hosted/chat-royale.zip
 chat-royale/services/hosted/hosted-remove/hosted-remove.zip
 chat-royale/services/hosted/hosted-inital/index.zip
 *.zip
+*.png
